<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rodoggx.vendingmachine.MainActivity">

    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/app_select"
       android:textAppearance="@android:style/TextAppearance.Material.Large"
       android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <CheckBox
            android:id="@+id/select_cola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cola_descr"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <CheckBox
            android:id="@+id/select_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chips_descr"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <CheckBox
            android:id="@+id/select_candy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/candy_descr"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coin_descr"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button"
        android:textSize="18sp"
        android:background="@color/buttonBackground" />
</LinearLayout>
